--- a/index.html
+++ b/index.html
@@ -10,21 +10,121 @@
 </head>
 <body>
 <!--Nolan Mielke, 012604284, D479-->
-    <img src="logo.jpg" id="logo" alt="Company Logo">
-        <nav id="nav">  
-            <a href="index.html">Home</a>
-            <a href="faq.html">FAQ</a>
-            <a href="news.html">News</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+<section class="header">
+  <h1 class="t-h">Welcome To Taniti!</h1>
+    <h2 class="s-h">Open To Travel Today!</h2>
+      <nav id="nav">  
+        <a href="index.html">Home</a>
+        <a href="faq.html">FAQ</a>
+        <a href="news.html">News</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+</section>
 <main>
+<section class="grid1">
+  <section class="slideshow">
+    <div class="slideshow-container">
 
-</main>
+    <div class="mySlides fade">
+      <div class="numbertext">1 / 3</div>
+      <img src="img\boat-in-caribbean-14884763094mZ.jpg" style="width:100%">
+      <div class="text" style="color: black;">Boat in Caribbean. Kratochvil, P.</div>
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">2 / 3</div>
+        <img src="img\arenal-volcano-costa-rica-1582562227WCk.jpg" style="width:100%">
+        <div class="text">Arenal Volcano. Biser, L.</div>
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 3</div>
+        <img src="img\tropical-beach-1454007190ZAK.jpg" style="width:100%">
+        <div class="text">Tropical Beach. Phillips, K.</div>
+    </div>
+
+<a class="prev" onclick="plusSlides(-1)">❮</a>
+<a class="next" onclick="plusSlides(1)">❯</a>
+
+    </div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+</div>
+</section>
+
+  <section class="intro">
+    <h1>Welcome!</h1>
+      <p>Hello and welcome to the Taniti tourism guide website! Here you can find a vast selection of information regarding the island, tourism, and how we can help with fulfilling the ideal landscape of a wonderful vacation.</p>
+    <h1>About Taniti</h1>
+      <p>Taniti is a small, tropical island in the Pacific. While the island has an area of less than 500 square miles, the terrain is varied and includes both sandy and rocky beaches, a small but safe harbor, lush tropical rainforests, and a mountainous interior that includes a small, active volcano. Taniti has an indigenous population of about 20,000 people.</p>
+  </section>
+</section>
+
+<section class="grid2">
+
+  <section class="intro2">
+    <h1>Lodging</h1>
+      <p>Taniti has a wide variety of lodging that ranges from an inexpensive hotel to one large, four-star resort. There are many small, family-owned hotels and a growing number of bed and breakfasts. All types of lodging are strictly regulated and regularly inspected by the Tanitian government.</p>
+    <h1>Entertainment</h1>
+      <p>Most people visit Taniti to enjoy the beaches, explore the rainforest, and to visit the volcano. However, there are other things to do, including visiting a local history museum, going on chartered fishing tours, snorkeling, zip-lining in the rainforest, visiting several pubs, including a microbrewery, dancing at a new dance club, seeing a movie, taking helicopter rides, playing at an arcade, visiting art galleries, and bowling. Also, a nine-hole golf course should be operational by next year. Many of these activities are located in Merriton Landing, which is a rapidly developing area on the north side of Yellow Leaf Bay.</p>
+  </section>
+
+  <section class="slideshow">
+    <div class="slideshow-container">
+
+      <div class="mySlides2 fade">
+        <div class="numbertext">1 / 3</div>
+          <img src="img\drink-on-beach.jpg" style="width:100%">
+          <div class="text" style="color: black;">Drink On Beach. Kratochvil, V.</div>
+    </div>
+
+  <div class="mySlides2 fade">
+    <div class="numbertext">2 / 3</div>
+      <img src="img\arenal-volcano-costa-rica-1582562227WCk.jpg" style="width:100%">
+      <div class="text">Caption Two</div>
+  </div>
+
+  <div class="mySlides2 fade">
+    <div class="numbertext">3 / 3</div>
+      <img src="img\tropical-beach-1454007190ZAK.jpg" style="width:100%">
+      <div class="text">Caption Three</div>
+  </div>
+
+<a class="prev" onclick="plusSlides2(-1)">❮</a>
+<a class="next" onclick="plusSlides2(1)">❯</a>
+
+  </div>
+<br>
+
+  <div style="text-align:center">
+    <span class="dot2" onclick="currentSlide2(1)"></span> 
+    <span class="dot2" onclick="currentSlide2(2)"></span> 
+    <span class="dot2" onclick="currentSlide2(3)"></span> 
+  </div>
+  </section>
+</section>
+
+  <h1>Transportation</h1>
+    <p>Almost all visitors arrive to Taniti by air, though some arrive on a small cruise ship that docks in Yellow Leaf Bay for one night per week. Taniti is served by a small airport that can accommodate small jets and propeller planes. Taniti is in the process of expanding the airport so larger jets will be able to land on the island within the next few years.</p>
+  <h1>Ground Transportation</h1>
+    <p>Public buses serve Taniti City and run from 5 a.m. to 11 p.m. every day. Private buses serve the rest of the island. Taxis are available in Taniti City, and rental cars can be rented from a local rental agency near the airport. Bikes and helmets are available to rent from several vendors (helmets are required by law). Taniti City is fairly flat and very walkable. Many tourists stay in the area surrounding Merriton Landing: this area is easy to explore on foot.</p>
+  <h1>More Information</h1>
+    <p>More information can be found on the frequently asked questions page. If you can't find an answer to a question, or otherwise would like more information. Please feel free to contact us!</p>
+    <nav id="nav">
+      <a href="faq.html">FAQ</a>
+      <a href="contact.html">Contact Us</a>
+    </nav>
+  </main>
 <footer>
-    <h1>Taniti</h1>
+    <h1 class="t-h">Taniti</h1>
     <p>Author: Nolan Mielke<br>
     Taniti Travel Site<br>
     &copy; 2025</p>
+    <script src="js/main.js"></script>
   </footer>
   </body>
 </html>
