--- a/contact.html
+++ b/contact.html
@@ -40,11 +40,12 @@
           </div>
 </form>
       </main>
-    <footer>
-      <img src="logo.jpg" id="logo" alt="Company Logo">
-      <p>Author: Nolan Mielke<br>
-      Paradigm Pet Professionals<br>
-      &copy; 2025</p>
-    </footer>
+<footer>
+    <h1 class="t-h">Taniti</h1>
+    <p>Author: Nolan Mielke<br>
+    Taniti Travel Site<br>
+    &copy; 2025</p>
+    <script src="js/main.js"></script>
+  </footer>
   </body>
 </html>
