--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
       <img src="img\boat-in-caribbean-14884763094mZ.jpg" style="width:100%">
-      <div class="text" style="color: black;">Boat in Caribbean. Kratochvil, P.</div>
+      <div class="text">Boat in Caribbean. Kratochvil, P.</div>
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
-        <img src="img\arenal-volcano-costa-rica-1582562227WCk.jpg" style="width:100%">
-        <div class="text">Arenal Volcano. Biser, L.</div>
+        <img src="img\costa-rica-volcano-1392539786Dtx.jpg" style="width:100%">
+        <div class="text">Costa Rica Volcano. Casper, K.</div>
     </div>
 
     <div class="mySlides fade">
@@ -79,19 +79,19 @@
       <div class="mySlides2 fade">
         <div class="numbertext">1 / 3</div>
           <img src="img\drink-on-beach.jpg" style="width:100%">
-          <div class="text" style="color: black;">Drink On Beach. Kratochvil, V.</div>
+          <div class="text">Drink On Beach. Kratochvil, V.</div>
     </div>
 
   <div class="mySlides2 fade">
     <div class="numbertext">2 / 3</div>
-      <img src="img\arenal-volcano-costa-rica-1582562227WCk.jpg" style="width:100%">
-      <div class="text">Caption Two</div>
+      <img src="img\hotel-balcony-sea-view-1434268788R2c.jpg" style="width:100%">
+      <div class="text">Hotel Balcony Sea View, Kratochvil, P.</div>
   </div>
 
   <div class="mySlides2 fade">
     <div class="numbertext">3 / 3</div>
-      <img src="img\tropical-beach-1454007190ZAK.jpg" style="width:100%">
-      <div class="text">Caption Three</div>
+      <img src="img\golfers-on-the-green.jpg" style="width:100%">
+      <div class="text">Golfers On The Green, Kistler, K.</div>
   </div>
 
 <a class="prev" onclick="plusSlides2(-1)">❮</a>
