--- a/news.html
+++ b/news.html
@@ -33,6 +33,7 @@
     <p>Author: Nolan Mielke<br>
     Taniti Travel Site<br>
     &copy; 2025</p>
+    <script src="js/main.js"></script>
   </footer>
   </body>
 </html>
