--- a/faq.html
+++ b/faq.html
@@ -39,10 +39,11 @@
     <p>Taniti uses the U.S. dollar as its currency, but many businesses will also accept euros and yen. Several banks facilitate currency exchange, and many businesses accept major credit cards.</p>
 </main>
 <footer>
-    <h1>Taniti</h1>
+    <h1 class="t-h">Taniti</h1>
     <p>Author: Nolan Mielke<br>
     Taniti Travel Site<br>
     &copy; 2025</p>
+    <script src="js/main.js"></script>
   </footer>
   </body>
 </html>
