Added News Articles
Revised content on news page to fill in for placeholder elements. Also revised CSS for news site to be visually appealing. Not final article descriptions and images. Will update soon.

--- a/news.html
+++ b/news.html
@@ -21,12 +21,34 @@
       </nav>
 </section>
 <main>
-  <h1>News Article #1</h1>
-    <p>Lorem Ipsum</p>
-  <h1>News Article #2</h1>
-    <p>Lorem Ipsum</p>
-  <h1>News Article #3</h1>
-    <p>Lorem Ipsum</p>
+
+  <div class="article">
+    <img src="img\costa-rica-volcano-1392539786Dtx.jpg" class="a-img">
+      <h1>Nine Hole Golf Course Expected To Launch Next Year</h1>
+        <p>Long anticipated nine hole golf course is expected to launch in Taniti next year. Tourists and those local to Taniti approve greatly of the service and deeply anticipate it's arrival.</p>
+          <nav id="nav">
+            <a href="">Learn More</a>
+          </nav>  
+  </div>  
+
+  <div class="article">
+    <img src="img\costa-rica-volcano-1392539786Dtx.jpg" class="a-img">
+      <h1>Great Taniti Volcano Set To Erupt</h1>
+        <p>Long anticipated nine hole golf course is expected to launch in Taniti next year. Tourists and those local to Taniti approve greatly of the service and deeply anticipate it's arrival.</p>
+          <nav id="nav">
+            <a href="">Learn More</a>
+          </nav>  
+  </div>  
+
+  <div class="article">
+    <img src="img\costa-rica-volcano-1392539786Dtx.jpg" class="a-img">
+      <h1>Nine Hole Golf Course Expected To Launch Next Year</h1>
+        <p>Long anticipated nine hole golf course is expected to launch in Taniti next year. Tourists and those local to Taniti approve greatly of the service and deeply anticipate it's arrival.</p>
+          <nav id="nav">
+            <a href="">Learn More</a>
+          </nav>  
+  </div>  
+
 </main>
 <footer>
     <h1 class="t-h">Taniti</h1>
