Fixed CSS and added content
Updated news articles and added new pictures for news. Revised content for news. Corrected CSS.

--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,12 @@
           <label for="name">Name:</label>
             <input type="text" id="name" name="name"><br>
           <label for="phone">Phone Number:</label>
-            <input type="text" id="lname" name="phone"><br>
+            <input type="text" id="phone" name="phone"><br>
           <label for="email">Email:</label>
-            <input type="text" id="lname" name="email"><br>
+            <input type="text" id="email" name="email"><br>
           <label for="time">Time Zone:</label>
-            <input type="text" id="lname" name="time"><br>
-          <label for="petname">Inquiry:</label>
+            <input type="text" id="time" name="time"><br>
+          <label for="inquiry">Inquiry:</label>
             <input type="text" id="inquiry" name="inquiry"><br>
           <div class="form-b">
           <input type="reset"  id="reset" value="Clear">
@@ -45,7 +45,6 @@
     <p>Author: Nolan Mielke<br>
     Taniti Travel Site<br>
     &copy; 2025</p>
-    <script src="js/main.js"></script>
   </footer>
   </body>
 </html>
