--- a/news.html
+++ b/news.html
@@ -21,33 +21,41 @@
       </nav>
 </section>
 <main>
+<section class="a-sec">
+  <div class="article">
+    <img src="img\lady-golfer-in-action.jpg" class="a-img">
+      <div class="caption">Golfers On The Green. Kistler, K.</div>
+        <h1>Golf Course Expected To Launch Next Year</h1>
+          <p>After months of planning and efforts in construction, the long anticipated nine hole golf course is expected to launch in January, 2026. The event organizers of this project have shared details about the upcoming attraction.</p>
+            <nav id="nav">
+              <a href="">Learn More</a>
+            </nav>  
+  </div>  
+</section>
 
+<section class="a-sec">
   <div class="article">
     <img src="img\costa-rica-volcano-1392539786Dtx.jpg" class="a-img">
-      <h1>Nine Hole Golf Course Expected To Launch Next Year</h1>
-        <p>Long anticipated nine hole golf course is expected to launch in Taniti next year. Tourists and those local to Taniti approve greatly of the service and deeply anticipate it's arrival.</p>
-          <nav id="nav">
-            <a href="">Learn More</a>
-          </nav>  
+      <div class="caption">Costa Rica Volcano. Casper, K.</div>
+        <h1>Great Taniti Volcano Set To Erupt</h1>
+          <p>Long anticipated nine hole golf course is expected to launch in Taniti next year. Tourists and those local to Taniti approve greatly of the service and deeply anticipate it's arrival.</p>
+            <nav id="nav">
+              <a href="">Learn More</a>
+            </nav>  
   </div>  
+</section>
 
+<section class="a-sec">
   <div class="article">
-    <img src="img\costa-rica-volcano-1392539786Dtx.jpg" class="a-img">
-      <h1>Great Taniti Volcano Set To Erupt</h1>
-        <p>Long anticipated nine hole golf course is expected to launch in Taniti next year. Tourists and those local to Taniti approve greatly of the service and deeply anticipate it's arrival.</p>
-          <nav id="nav">
-            <a href="">Learn More</a>
-          </nav>  
+    <img src="img\honolulu-international-airport.jpg" class="a-img">
+      <div class="caption">Honolulu International Airport. Watanebe, T.</div>
+        <h1>Airport Expansion Making Steady Progress</h1>
+          <p>Taniti's airport expansion project is continuing as planned and shows promise for expansion in visitor reach. Given the milestones reached already, it is expected that the larger Taniti airport project will be completed in the next three to four months.</p>
+            <nav id="nav">
+              <a href="">Learn More</a>
+            </nav>  
   </div>  
-
-  <div class="article">
-    <img src="img\costa-rica-volcano-1392539786Dtx.jpg" class="a-img">
-      <h1>Nine Hole Golf Course Expected To Launch Next Year</h1>
-        <p>Long anticipated nine hole golf course is expected to launch in Taniti next year. Tourists and those local to Taniti approve greatly of the service and deeply anticipate it's arrival.</p>
-          <nav id="nav">
-            <a href="">Learn More</a>
-          </nav>  
-  </div>  
+</section>
 
 </main>
 <footer>
@@ -55,7 +63,6 @@
     <p>Author: Nolan Mielke<br>
     Taniti Travel Site<br>
     &copy; 2025</p>
-    <script src="js/main.js"></script>
   </footer>
   </body>
 </html>
